ISTO-134 Address SQ reported issues in core Snowstorm functionality