@@ -5,14 +5,12 @@ import io.kaicode.rest.util.branchpathrewrite.BranchPathUriUtil;
 import jakarta.servlet.http.HttpServletRequest;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
-import org.snomed.snowstorm.core.data.domain.ConceptMini;
 import org.snomed.snowstorm.core.data.services.DialectConfigurationService;
 import org.snomed.snowstorm.core.data.services.NotFoundException;
 import org.snomed.snowstorm.core.data.services.identifier.IdentifierService;
 import org.snomed.snowstorm.core.pojo.BranchTimepoint;
 import org.snomed.snowstorm.core.pojo.LanguageDialect;
 import org.snomed.snowstorm.rest.converter.SearchAfterHelper;
-import org.snomed.snowstorm.rest.pojo.ConceptMiniNestedFsn;
 import org.snomed.snowstorm.rest.pojo.SearchAfterPageRequest;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
@@ -24,15 +22,13 @@ import org.springframework.util.Assert;
 import org.springframework.web.context.request.RequestAttributes;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static java.lang.Long.parseLong;
 import static org.snomed.snowstorm.config.Config.DEFAULT_LANGUAGE_DIALECTS;
@@ -85,12 +81,8 @@ public class ControllerHelper {
 		}
 
 		HttpHeaders httpHeaders = new HttpHeaders();
-		httpHeaders.setLocation(ServletUriComponentsBuilder.fromHttpUrl(requestUrl).path("/{id}").buildAndExpand(id).toUri());
+		httpHeaders.setLocation(UriComponentsBuilder.fromHttpUrl(requestUrl).path("/{id}").buildAndExpand(id).toUri());
 		return httpHeaders;
-	}
-
-	static List<ConceptMiniNestedFsn> nestConceptMiniFsn(Collection<ConceptMini> minis) {
-		return minis.stream().map(ConceptMiniNestedFsn::new).collect(Collectors.toList());
 	}
 
 	static String requiredParam(String value, String paramName) {
@@ -116,7 +108,6 @@ public class ControllerHelper {
 		}
 		return value;
 	}
-
 
 	public static <T> T throwIfNotFound(String type, T component) {
 		if (component == null) {
@@ -149,10 +140,14 @@ public class ControllerHelper {
 		}
 	}
 
-	//use parseAcceptLanguageHeader and work with LanguageDialects instead
+	/**
+	* @deprecated Use parseAcceptLanguageHeader and work with LanguageDialects instead
+	*/
 	@Deprecated
 	public static List<String> getLanguageCodes(String acceptLanguageHeader) {
-		return parseAcceptLanguageHeaderWithDefaultFallback(acceptLanguageHeader).stream().map(LanguageDialect::getLanguageCode).collect(Collectors.toList());
+		return parseAcceptLanguageHeaderWithDefaultFallback(acceptLanguageHeader).stream()
+				.map(LanguageDialect::getLanguageCode)
+				.toList();
 	}
 	
 	public static List<LanguageDialect> parseAcceptLanguageHeaderWithDefaultFallback(String acceptLanguageHeader) {
@@ -161,66 +156,97 @@ public class ControllerHelper {
 		return languageDialects;
 	}
 
-	public static List<Pair<LanguageDialect, Double>> parseAcceptLanguageHeaderWithWeights(String acceptLanguageHeader, boolean wildcard){
-		// en-ie-x-21000220103;q=0.8,en-US;q=0.5
-		List<Pair<LanguageDialect,Double>> languageDialectsAndWeights = new ArrayList<>();
+	public static List<Pair<LanguageDialect, Double>> parseAcceptLanguageHeaderWithWeights(
+			String acceptLanguageHeader, boolean wildcard) {
+
+		List<Pair<LanguageDialect, Double>> languageDialectsAndWeights = new ArrayList<>();
 
 		if (acceptLanguageHeader == null) {
 			acceptLanguageHeader = "";
 		}
-		double weight;
 		acceptLanguageHeader = acceptLanguageHeader.replaceAll("\\s+", "");
 		String[] acceptLanguageList = acceptLanguageHeader.toLowerCase().split(",");
+
 		for (String acceptLanguage : acceptLanguageList) {
 			if (acceptLanguage.isEmpty()) {
 				continue;
 			}
 
+			String[] valueAndWeight = acceptLanguage.split(";");
+			String value = valueAndWeight[0];
+			double weight = (valueAndWeight.length < 2) ? 0.1
+					: Double.parseDouble(valueAndWeight[1].substring(2));
+
 			String languageCode;
 			Long languageReferenceSet = null;
 
-			String[] valueAndWeight = acceptLanguage.split(";");
-			// We don't use the weight, just take the value
-			String value = valueAndWeight[0];
-			if (valueAndWeight.length < 2){
-				weight = 0.1;
-			} else {
-				weight = Double.parseDouble(valueAndWeight[1].substring(2));
-			}
-
-			if("*".equals(value) && wildcard){
+			if ("*".equals(value) && wildcard) {
 				languageCode = value;
 			} else {
-
-				Matcher matcher;
-				if ((matcher = LANGUAGE_PATTERN.matcher(value)).matches()) {
-					languageCode = matcher.group(1);
-				} else if ((matcher = LANGUAGE_AREA_PATTERN.matcher(value)).matches()) {
-					languageCode = matcher.group(1);
-				} else if ((matcher = LANGUAGE_AND_REFSET_PATTERN.matcher(value)).matches()) {
-					languageCode = matcher.group(1);
-					languageReferenceSet = parseLong(matcher.group(2));
-				} else if ((matcher = LANGUAGE_AND_DIALECT_PATTERN.matcher(value)).matches() || (matcher = LANGUAGE_AND_DIALECT_AND_CONTEXT_PATTERN.matcher(value)).matches()) {
-					languageCode = matcher.group(1);
-					languageReferenceSet = DialectConfigurationService.instance().findRefsetForDialect(value);
-				} else if ((matcher = LANGUAGE_AND_DIALECT_AND_REFSET_PATTERN.matcher(value)).matches()) {
-					languageCode = matcher.group(1);
-					languageReferenceSet = parseLong(matcher.group(3));
-				} else {
-					throw new IllegalArgumentException("Invalid displayLanguage: '" + value + "'");
-				}
+				LanguageParseResult result = parseLanguageValue(value);
+				languageCode = result.code;
+				languageReferenceSet = result.refset;
 			}
 
-
-			Pair<LanguageDialect,Double> languageDialect = new ImmutablePair<>(new LanguageDialect(languageCode, languageReferenceSet), weight);
+			Pair<LanguageDialect, Double> languageDialect =
+					new ImmutablePair<>(new LanguageDialect(languageCode, languageReferenceSet), weight);
 
 			if (!languageDialectsAndWeights.contains(languageDialect)) {
-				//Would normally use a Set here, but the order may be important
+				// Would normally use a Set here, but the order may be important
 				languageDialectsAndWeights.add(languageDialect);
 			}
 		}
 		return languageDialectsAndWeights;
 	}
+
+	private static class LanguageParseResult {
+		final String code;
+		final Long refset;
+
+		LanguageParseResult(String code, Long refset) {
+			this.code = code;
+			this.refset = refset;
+		}
+	}
+
+	private static LanguageParseResult parseLanguageValue(String value) {
+		Matcher matcher;
+
+		matcher = LANGUAGE_PATTERN.matcher(value);
+		if (matcher.matches()) {
+			return new LanguageParseResult(matcher.group(1), null);
+		}
+
+		matcher = LANGUAGE_AREA_PATTERN.matcher(value);
+		if (matcher.matches()) {
+			return new LanguageParseResult(matcher.group(1), null);
+		}
+
+		matcher = LANGUAGE_AND_REFSET_PATTERN.matcher(value);
+		if (matcher.matches()) {
+			return new LanguageParseResult(matcher.group(1), parseLong(matcher.group(2)));
+		}
+
+		matcher = LANGUAGE_AND_DIALECT_PATTERN.matcher(value);
+		if (matcher.matches()) {
+			return new LanguageParseResult(matcher.group(1),
+					DialectConfigurationService.instance().findRefsetForDialect(value));
+		}
+
+		matcher = LANGUAGE_AND_DIALECT_AND_CONTEXT_PATTERN.matcher(value);
+		if (matcher.matches()) {
+			return new LanguageParseResult(matcher.group(1),
+					DialectConfigurationService.instance().findRefsetForDialect(value));
+		}
+
+		matcher = LANGUAGE_AND_DIALECT_AND_REFSET_PATTERN.matcher(value);
+		if (matcher.matches()) {
+			return new LanguageParseResult(matcher.group(1), parseLong(matcher.group(3)));
+		}
+
+		throw new IllegalArgumentException("Invalid displayLanguage: '" + value + "'");
+	}
+
 
 	public static List<LanguageDialect> parseAcceptLanguageHeader(String acceptLanguageHeader) {
 		return parseAcceptLanguageHeaderWithWeights(acceptLanguageHeader,false)
